# hello-perf

./: Cargo.toml  build.rs
proto/helloperf/: helloperf.proto
src/helloperf/: client.rs  server.rs
